# streaming-vis-pca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  inc_pca.cpp  inc_pca.hpp  inc_pca.py  inc_pca_wrap.cpp  presetup.py  sample.ipynb  setup.py
docs/: .buildinfo  genindex.html  inc_pca.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  inc_pca.doctree  index.doctree
docs/_modules/: inc_pca.html  index.html
docs/_sources/: inc_pca.rst.txt  index.rst.txt
